src/style.sass
@use "sass:color"

@import url('https://fonts.googleapis.com/css2?family=Jost&display=swap')
@import url('https://fonts.googleapis.com/css2?family=Jost:wght@700&display=swap')

/*
 Josh's Custom CSS Reset
 https://www.joshwcomeau.com/css/custom-css-reset/

*, *::before, *::after
    box-sizing: border-box

*
    margin: 0

@media (prefers-reduced-motion: no-preference)
    html
        interpolate-size: allow-keywords

body
    font-family: "Jost", sans-serif
    line-height: 1.5
    -webkit-font-smoothing: antialiased

img, picture, video, canvas, svg
    display: block
    max-width: 100%

input, button, textarea, select
    font: inherit

p, h1, h2, h3, h4, h5, h6
    overflow-wrap: break-word

p
    text-wrap: pretty

h1, h2, h3, h4, h5, h6
    text-wrap: balance

#root, #__next
    isolation: isolate

h2
    font-size: 2.2rem

h3
    font-size: 1.8rem

/* Catppuccin Palette

$rosewater: #f5e0dc
$flamingo: #f2cdcd
$pink: #f5c2e7
$mauve: #cba6f7
$red: #f38ba8
$maroon: #eba0ac
$peach: #fab387
$yellow: #f9e2af
$green: #a6e3a1
$teal: #94e2d5
$sky: #89dceb
$sapphire: #74c7ec
$blue: #89b4fa
$lavender: #b4befe
$text: #cdd6f4
$subtext1: #bac2de
$subtext0: #bac2de
$overlay2: #9399b2
$overlay1: #7f849c
$overlay0: #6c7086
$surface2: #585b70
$surface1: #45475a
$surface0: #313244
$base: #1e1e2e
$mantle: #181825
$crust: #11111b

/**
 Custom reset configuration

body
    background-color: $base
    color: $text
    display: flex
    flex-direction: column
    height: 100vh

header
    display: flex
    align-content: center
    align-items: center
    background-color: $mantle
    position: relative
    padding: 10px 0

    button
        margin-right: 1rem

#title
    /** https://stackoverflow.com/a/1777282 ; wow.
    font-size: 1.5rem
    position: absolute
    left: 0
    right: 0
    margin-inline: auto
    width: fit-content

#app-name
    margin-left: 1rem
    margin-right: auto

main
    margin-top: 1rem
    display: flex
    flex-direction: column
    flex-grow: 1

button
    background-color: $surface0
    border: 0
    padding: 5px 10px
    border-radius: 4px
    color: $text
    height: fit-content
    width: fit-content

button:hover
    background-color: $surface1

button:active
    background-color: $surface2

button:disabled
    background-color: $mantle

button.accent
    background-color: $sky
    color: $base

button.accent:hover
    background-color: color.scale($sky, $lightness: 10%)

button.accent:active
    background-color: color.scale($sky, $lightness: 20%)

button.accent:disabled
    color: $text
    background-color: color.scale($sky, $lightness: -80%)

input, textarea
    background-color: $crust
    border: 2px solid $surface0
    border-radius: 4px
    color: $text
    padding: 2px 6px 2px 6px

input:focus, textarea:focus
    border: 2px solid $sapphire
    outline: none

textarea
    resize: none

footer
    display: none
    text-align: center
    background-color: $mantle
    padding: 5px 0

/** This is probably not a good idea
input[type="number"]
    -webkit-appearance: textfield
    -moz-appearance: textfield
    appearance: textfield

input[type=number]::-webkit-inner-spin-button,
input[type=number]::-webkit-outer-spin-button
    -webkit-appearance: none

.table
    display: flex
    flex-wrap: wrap
    margin: 1rem auto
    gap: 1rem

.table-item
    flex: 1 1 0px
    background-color: $crust
    border-radius: 5px
    padding: 1rem

.item-value
    margin-bottom: 0.2rem
    font-size: 2rem
    font-weight: bold
    text-align: center
    color: $mauve

.item-description, .item-fluff
    text-align: center

.stat-basic, #stat-button-group
    width: 60vw

    .table-item
        min-width: 240px

.stat-material
    width: 60vw

    .table-item
        min-width: 175px

#manu-info-table
    width: 100%

    .item-value
        font-size: 1.3rem
        font-weight: normal
        color: $text

#data-input-table
    display: grid
    grid-template-columns: 1fr 1fr
    width: 100%

    .table-item
        padding: 0
        background-color: unset
        border-radius: 0

    .table-item:first-child
        border-right: 2px solid $sky
        display: flex
        flex-direction: column

    .item-description
        font-weight: bold
        font-size: 1.5rem

    .item-value
        font-size: 1rem
        font-weight: normal
        color: $text

#result-view .table
    width: 50vw

select
    background-color: $crust
    border: 2px solid $surface0
    border-radius: 4px
    color: $text
    padding: 2px 6px 2px 6px

/** Configuration View

#data-input
    display: flex

#logihub-input, #manual-input
    display: flex
    flex-direction: column
    margin: 0 auto
    width: 25vw
    height: 100%
    min-width: 30ch

    label
        text-align: left
        margin-top: 10px
        margin-bottom: 5px

    button
        margin-top: 1rem

#submit-item-button
    margin-left: auto
    margin-right: auto

#config-show-logihub-help
    margin-left: 1rem

#logihub-import-button-group
    width: fit-content
    margin: 1rem auto 0 auto

#logihub-input
    textarea
        flex-grow: 1

#data-view .item-section-cards, #result-item-crafted
    display: grid
    gap: 1rem
    /* dynamically create column, making sure element have at least 250px
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr))
    margin: 0 1rem

#result-item-crafted
    margin-top: 1rem

#data-view .item-section-title
    margin: 1rem auto
    width: fit-content

/** Manu View

#manu-view
    display: flex
    flex-direction: column
    margin-left: auto
    margin-right: auto
    width: 60vw
    height: 100%

    table
        width: 100%
        min-width: 0

#requirement-view
    display: flex
    flex-direction: column
    align-items: center

#manu-qs
    margin-bottom: 0.5rem

#item-to-craft
    display: flex
    flex-direction: column
    gap: 15px
    margin-top: 10px

.manu-item-line
    display: flex
    gap: 10px
    padding: 10px
    border-radius: 5px
    align-items: center
    min-width: 35ch

    .manu-item-name
        margin-right: auto

#manu-control
    margin-top: auto
    margin-bottom: 10px

#rq-crafted
    margin-top: 0.5rem

#manu-button-panel
    display: flex
    width: fit-content
    margin: 0 auto
    align-items: end

.manu-button-popup-hidden
    display: none

.manu-button-popup-show
    text-align: center
    background-color: $surface0
    border-top: 2px solid $lavender
    height: 2.5rem
    line-height: 2.5rem
    width: 3.2rem
    margin: 0 5px

.manu-control-button
    position: relative
    width: 3.2rem
    height: 3.2rem
    padding: 5px
    margin: 0 5px

/** Result

.result-hd
    margin-top: 3rem
    text-align: center

#result-item-crafted
    .item-card
        grid-template-rows: 1fr

/** Stat View

#stat-import-export-overlay 
    .overlay-content
        width: 75vw
        display: flex
        justify-content: center

    .overlay-content > *
        display: flex
        flex-direction: column
        gap: 1rem
        flex-grow: 1
        padding: 0 1.5rem

        textarea
            flex-grow: 1
            min-height: 10rem

    #stat-import-data
        border-right: 2px solid $sapphire

        button
            margin: 0 auto

#stat-button-group
    justify-content: flex-end
    margin: 0 auto 1.5rem auto

.stat-header
    text-align: center
    margin-bottom: 1.5rem

/** Item Card

.item-card
    display: grid
    grid-template-rows: 1fr 1fr 1fr
    gap: 10px
    border-radius: 6px
    padding: 10px

    .item-name, .item-priority
        margin-right: auto

    .item-card-line
        display: inline-flex
        flex: 1 1 0px

    .item-cost
        text-align: center
        width: 100%

.item-image
    height: 1.5rem
    margin-right: 5px

.lightarm
    background: linear-gradient(120deg, $yellow, 2%, $mantle 85%)

.heavyarm
    background: linear-gradient(120deg, $peach, 2%, $mantle 85%)

.heavyshell
    background: linear-gradient(120deg, $red, 2%, $mantle 85%)

.utilities
    background: linear-gradient(120deg, $blue, 2%, $mantle 85%)

.medical
    background: linear-gradient(120deg, $green, 2%, $mantle 85%)

.uniform
    background: linear-gradient(120deg, $mauve, 2%, $mantle 85%)

/** Others

.hidden
    display: none !important

.line
    margin: 10px 0
    text-align: center

.group
    display: flex
    flex-direction: row
    gap: 1.5rem

.label
    margin-bottom: 5px

.overlay
    display: flex
    align-items: center
    position: absolute
    top: 0
    width: 100vw
    height: 100vh
    background-color: color.adjust($overlay0, $alpha: -0.6)

.overlay-content
    margin: auto
    padding: 20px
    width: 60vw
    min-width: 300px
    height: fit-content
    max-height: 80vh
    overflow: scroll
    background-color: $base

    h3
        text-align: center
        margin-bottom: 1rem

    ol
        list-style-position: inside
        padding-left: 0

.codeblock
    padding: 10px
    font-family: 'Courier New', Courier, monospace
    background: $crust
    word-wrap: break-word

.error-popup
    text-align: center
    color: $red
    margin-top: 1rem

/** At rules

@media (max-width: 1000px)
    #manu-view
        width: 75vw

    #result-view .table
        width: 75vw

@media (max-width: 700px)
    #stat-material
        width: 95vw

    #stat-basic, #stat-button-group
        width: 95vw

    #logihub-input textarea
        min-height: 10ch

    #data-input-table
        width: fit-content
        grid-template-columns: 1fr
        grid-template-rows: 1fr 1fr

        .table-item:first-child
            border-right: none
            border-bottom: 2px solid $sapphire

    #data-input-table #logihub-import-button-group
        margin-bottom: 1.5rem

    #manu-view
        width: 95vw

@media (max-width: 450px)
    #app-name
        display: none

    #title
        position: relative
        margin: 0 0 0 10px

    header button
        margin-left: auto
        margin-right: 10px

    footer
        display: block

